--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@ button { padding:14px; font-size:16px; }
     <button id="btnPaid">Tisch bezahlt</button>
   </main>
 </div>
+  
+  <div id="contextMenu" style="display:none; position:absolute; background:#333; padding:12px; border-radius:10px; z-index:30; width:200px;">
+  <h3 id="ctxTitle" style="margin-top:0;font-size:16px;">Tisch</h3>
+  <button id="ctxMove">Verschieben</button>
+  <button id="ctxServed">Tisch bedient</button>
+  <button id="ctxReminder">Erinnerung</button>
+  <div id="ctxReminderText" style="margin-top:8px;font-size:12px;color:#eee;"></div>
+</div>
 
 <script src="app.js"></script>
 <script>
