--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@ select {
 .table:active {
   transform: scale(0.96);
 }
+.reset-counter {
+  position: absolute;
+  top: 4px;
+  left: 6px;
+  font-size: 14px;
+  font-weight: bold;
+  opacity: 0.8;
+  color: rgba(255, 255, 255, 0.9);
+  pointer-events: none; /* Klicks gehen durch */
+}
 small { 
   font-size:13px; 
   font-weight: normal; 
